2005-04-17  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpaction.h
	* app/widgets/gimpactiongroup.h
	* app/widgets/gimpcellrendereraccel.h
	* app/widgets/gimpenumaction.h
	* app/widgets/gimppluginaction.h
	* app/widgets/gimpstringaction.h
	* app/widgets/gimpuimanager.h: declare get_type() function as
	G_GNUC_CONST.

2005-04-17  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/scripts/guides-new-percent.scm
	* plug-ins/script-fu/scripts/guides-new.scm: don't use undo
	groups. It's useless for a single operation and it's wrong to use
	the undo group unconditionally, but add the guides conditionally.

2005-04-16  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpcontext.c (gimp_context_real_set_brush)
	(gimp_context_real_set_pattern): no need to get base_config twice
	in the same function.

	* app/widgets/gimpblobeditor.h: include the parent class.

	* app/widgets/gimpdataeditor.c (gimp_data_editor_init): set the
	name entry insensitive.

2005-04-16  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdataeditor.[ch]: implement
	GimpDocked::get_title() and add "(read only)" to the dialog's
	title if the data is not editable. Fixes bug #164003.

	(gimp_data_editor_real_set_data): call gimp_docked_title_changed()
	when the editable state changes.

	(struct GimpDataEditorClass): added "const gchar *title" member.

	* app/widgets/gimpbrusheditor.c
	* app/widgets/gimpgradienteditor.c
	* app/widgets/gimppaletteeditor.c (class_init): set titles.

2005-04-16  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpbase.def: added gimp_desaturate_mode_get_type.

2005-04-16  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: use a GimpFileEntry to
	configure the web-browser setting. GtkFileChooserButton just
	doesn't work for it.

2005-04-16  Michael Natterer  <mitch@gimp.org>

	* plug-ins/helpbrowser/dialog.c: removed the "Close" button and
	added a "Wilber" button instead which opens the online docs in the